fix(popup-menu-web): fix not overflowing from parent container

--- a/packages/pluggableWidgets/popup-menu-web/src/ui/PopupMenu.scss
+++ b/packages/pluggableWidgets/popup-menu-web/src/ui/PopupMenu.scss
@@ -1,3 +1,7 @@
+.widget-popupmenu-root {
+    position: fixed;
+}
+
 .popupmenu {
     position: relative;
     display: flex;
